fixed color and spacing

--- a/src/input.css
+++ b/src/input.css
@@ -30,6 +30,7 @@
     margin-left: 1.5rem;
     margin-right: 1.5rem;
     margin-top: 1.5rem;
+    margin-bottom: 2.5rem;
   }
   @media (min-width: 48rem) {
     .margins {
